[gd_scene load_steps=5 format=3 uid="uid://8lp4qx7vykdy"]

[ext_resource type="Script" uid="uid://d0o5s4ibnq08x" path="res://microjuegos/atrapalo_6.gd" id="1_hlwow"]
[ext_resource type="Texture2D" uid="uid://cnpij3bucijph" path="res://fondos/fondocielo.png" id="2_hlat2"]
[ext_resource type="Texture2D" uid="uid://ccahi454ny40h" path="res://sprites/micro 1/gatocaja.png" id="3_cpgoq"]
[ext_resource type="Texture2D" uid="uid://c4i174hdyxd7f" path="res://sprites/micro 1/rat.png" id="4_cv7xx"]

[node name="MicroAtrapalo" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hlwow")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1922.0
offset_bottom = 1090.0
texture = ExtResource("2_hlat2")

[node name="Caja" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 494.0
offset_right = 1256.0
offset_bottom = 1123.0
texture = ExtResource("3_cpgoq")

[node name="Raton" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 811.0
offset_top = 300.0
offset_right = 1131.0
offset_bottom = 620.0
texture = ExtResource("4_cv7xx")

[node name="TextoInstruccion" type="Label" parent="."]
layout_mode = 0
offset_left = 418.0
offset_top = 50.0
offset_right = 832.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 80
text = "Atr[A]palo!"

[node name="ZonaCaptura" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 891.0
offset_top = 300.0
offset_right = 1090.0
offset_bottom = 506.0
color = Color(0.992538, 0, 0.17589, 1)

[node name="TimerJuego" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="TimerJuego" to="." method="_on_TimerJuego_timeout"]
